--- a/Report/Presentation.tex
+++ b/Report/Presentation.tex
@@ -114,13 +114,13 @@
 \begin{frame}
   \frametitle{\titleC}
   \begin{itemize}
-  	\item The primal soft margin SVM QP is equivalent to solving the \textbf{\alert{dual problem:}}
-  	\begin{eqnarray}\label{eq:dual_problem}
+  	\item The primal Soft Margin SVM QP is equivalent to solving the \textbf{\alert{dual problem:}}
+  	\begin{eqnarray*}\label{eq:dual_problem}
   	\text{minimize} & d(\alpha) := \frac{1}{2} \alpha^T Q \alpha - 1^T \alpha  \\ 
   	\nonumber
   	\text{s.t.} &  0 \leq \alpha \leq C  \quad \text{and} \quad 	y^T \alpha = 0,
-  	\end{eqnarray}
-  	where $q_{ij} = y_i y_j k(x_i,x_j)$, $k$ the kernel function and $C$ the penalty term
+  	\end{eqnarray*}
+  	where $q_{ij} = y_i y_j k(x_i,x_j)$, $x_i$ the data, $y_i$ the labels, $k$ the kernel function and $C$ the penalty term
   	\item Since Q is spsd, satisfying the KKT conditions guarantees a solution to (\ref{eq:dual_problem}).
   \end{itemize}
 \end{frame}
@@ -130,7 +130,7 @@
 \begin{itemize}
 	
 	\item Lagrangian of dual objective $d$: $\mathcal{L}(\alpha,\delta,\mu,\beta) = d(\alpha) - \delta^T\alpha + \mu^T(\alpha - C) - \beta \alpha^T y$
-	\item KKT conditions for dual Lagrangian:
+	\item \textbf{\alert{KKT conditions}} for dual Lagrangian:
 	\begin{equation*}
 	\left.
 	\begin{aligned}
@@ -143,35 +143,37 @@
 	\end{aligned}
 	\right\} \text{for all } i \in \{1,\ldots,l\}
 	\end{equation*}
+	\item Define $F_i(\alpha) := y_i (\partial_i d)(\alpha) = \sum_{i = 1}^l \alpha_j y_j k(x_i,x_j) - y_i$.
 \end{itemize}
 \end{frame}
 
 \begin{frame}
 \frametitle{\titleC}
 \begin{itemize}
-	\item Define $F_i(\alpha) := y_i (\partial_i d)(\alpha) = \sum_{i = 1}^l \alpha_j y_j k(x_i,x_j) - y_i$.
+	
 	\item The KKT conditions are equivalent to:
 	\begin{equation*}\label{equiv_KKT}
 	b_{up}(\alpha) := \min_{i \in I_{up}(\alpha)} F_i(\alpha) \geq \max_{j \in I_{low}(\alpha)} F_j(\alpha) =: b_{low}(\alpha),
 	\end{equation*}
 	where \begin{itemize}
-		\item $I_{up}(\alpha) := \{ i \mid  \alpha_i < C \text{ and } y_i = 1 \text{ or } \alpha_i > 0 \text{ and } y_i = -1 \}$
-		\item $I_{low}(\alpha) := \{ j \mid \alpha_j < C \text{ and } y_j = -1 \text{ or } \alpha_j > 0 \text{ and } y_j = 1 \}$
+		\item $I_{up}(\alpha) := \{ i \mid  \alpha_i < C, y_i = 1 \text{ or } \alpha_i > 0, y_i = -1 \}$
+		\item $I_{low}(\alpha) := \{ j \mid \alpha_j < C, y_j = -1 \text{ or } \alpha_j > 0, y_j = 1 \}$.
 	
 	\end{itemize}
 	\item Relax to $b_{up}(\alpha) \geq b_{low}(\alpha) - \tau$ for some tolerance $\tau > 0$.
+	\item A pair $(i,j) \in I_{up}(\alpha) \times I_{low}(\alpha)$ with $F_i(\alpha) < F_j(\alpha) - \tau$ is called \textbf{\alert{$\tau$-violating. }}
 \end{itemize}
 \end{frame}
 
 \begin{frame}
 \frametitle{\titleC}
 	\begin{itemize}
-		\item A pair $(i,j) \in I_{up}(\alpha) \times I_{low}(\alpha)$ with $F_i(\alpha) < F_j(\alpha) - \tau$ is called \textbf{\alert{$\tau$-violating. }}
+		
 	\end{itemize}
 	\begin{algorithm}[General SMO type algorithm]\label{GSMO} Let $\tau > 0$. Initialize $k = 0 $ and $\alpha^0 = 0$ and generate iterates $\alpha^k$, $k \in \mathbb{N},$ as follows: 
 		\begin{enumerate}
-			\item If $\alpha^k$ satisfies $b_{up}(\alpha^k) \geq b_{low}(\alpha^k) - \tau$, stop. Else choose a $\tau$-violating pair $(i,j) \in I_{up}(\alpha^k) \times I_{low}(\alpha^k)$.
-			\item Minimize $d$ only in $\alpha^k_i$ and $\alpha^k_j$, leaving $\alpha^k_n$ fixed for $n \notin \{i,j\}$ and respecting constraints. $\rightarrow$ Obtain $\alpha^{\text{new}}$.
+			\item If $\alpha^k$ satisfies $b_{up}(\alpha^k) \geq b_{low}(\alpha^k) - \tau$, stop. Else \textbf{\alert{pick}} a $\tau$-violating pair $(i,j) \in I_{up}(\alpha^k) \times I_{low}(\alpha^k)$.
+			\item \textbf{\alert{Minimize}} $d$ only in $\alpha^k_i$ and $\alpha^k_j$, leaving $\alpha^k_n$ fixed for $n \notin \{i,j\}$ and respecting constraints. $\rightarrow$ Obtain \textbf{\alert{$\alpha^{\text{new}}$}}.
 			\item Set $k := k+1$, $\alpha^k := \alpha^{\text{new}}$ and go to Step 1.
 		\end{enumerate}
 	\end{algorithm}
@@ -180,18 +182,48 @@
 \begin{frame}
 \frametitle{\titleC}
 \begin{itemize}
-	\item Each step of GSMO is only a (clipped) \textbf{\alert{one-dimensional QP}} $\rightarrow$ analytic solution known.
-	\item The analytic solution for this is known $\rightarrow$ \textbf{\alert{cheap}}.
-	\item Two heuristics for choosing violating pair: \begin{itemize}
-		\item WSS1: steepest possible gradient
+	\item Each step of GSMO is only a (clipped) \textbf{\alert{one-dimensional QP}} $\rightarrow$ analytic solution known $\rightarrow$ \textbf{\alert{cheap}}.
+	\item Two heuristics for choosing violating pair: \\
+	\begin{itemize}
+		\item WSS1: steepest possible \textbf{\alert{gradient}}
 		\[
 		(i_{up},i_{low}) \in \argmin_{i \in I_{up}(\alpha)}F_i(\alpha) \times \argmax_{j \in I_{low}(\alpha)}F_j(\alpha)
 		\]
-		\item WSS2: 
+		\item WSS2: maximal possible \textbf{\alert{decrease}} in $d$
+		\[
+		(i,j) \in \argmin_{i \in I_{up}(\alpha)}F_i(\alpha) \times I_{low}(\alpha): d(\alpha^{new}) - d(\alpha) \rightarrow \min
+		\]
 		
 	\end{itemize}
+	\item WSS2 seems promising, but is too expensive.
 \end{itemize}
 \end{frame}
+
+\begin{frame}
+\frametitle{\titleC}
+\begin{itemize}
+	\item \textbf{\alert{Run time comparison}} of algorithms with Gaussian kernel and labels by first ECOC classifier on our digits:
+\end{itemize}
+
+\begin{figure}[h]
+	\includegraphics[width=1\textwidth, center]{images_for_presentation/benchplot_gauss.pdf}
+	\label{bench_gauss}
+\end{figure}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{\titleC}
+\begin{itemize}
+	\item All algorithms seem to have \textbf{\alert{polynomial order 2.}}
+	\item Our WSS1 with caching runs about 5.8 times as long as scikit-learn SVC.
+\end{itemize}
+\begin{figure}[h]
+	\includegraphics[width=1\textwidth, center]{images_for_presentation/benchplot_gauss_loglog.pdf}
+	\label{bench_gauss}
+\end{figure}
+\end{frame}
+          
 
 \begin{frame}
   \frametitle{\titleD}
