--- a/Report/Presentation.tex
+++ b/Report/Presentation.tex
@@ -200,15 +200,15 @@
 \end{frame}
 
 \begin{frame}
-\frametitle{\titleC}
-\begin{itemize}
-	\item \textbf{\alert{Run time comparison}} of algorithms with Gaussian kernel and labels by first ECOC classifier on our digits:
-\end{itemize}
+	\frametitle{\titleC}
+	
+		\begin{itemize}
+		\item \textbf{\alert{Run time comparison}} of algorithms with Gaussian kernel and labels by first ECOC classifier on our digits:
+		\end{itemize}
 
-\begin{figure}[h]
-	\includegraphics[width=1\textwidth, center]{images_for_presentation/benchplot_gauss.pdf}
-	\label{bench_gauss}
-\end{figure}
+	\begin{figure}[h]
+	\includegraphics[width=1\textwidth]{images_for_presentation/benchplot_gauss.pdf}
+	\end{figure}
 
 \end{frame}
 
@@ -219,8 +219,7 @@
 	\item Our WSS1 with caching runs about 5.8 times as long as scikit-learn SVC.
 \end{itemize}
 \begin{figure}[h]
-	\includegraphics[width=1\textwidth, center]{images_for_presentation/benchplot_gauss_loglog.pdf}
-	\label{bench_gauss}
+	\includegraphics[width=1\textwidth]{images_for_presentation/benchplot_gauss_loglog.pdf}
 \end{figure}
 \end{frame}
           
