von meiner Seite aus fertig

--- a/Plotting_Benchmark_Results.ipynb
+++ b/Plotting_Benchmark_Results.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -116,8 +116,10 @@
       "[  1.9893437  -11.55769173]\n",
       "[  2.01982298 -10.30158383]\n",
       "[  1.88509906 -13.31627426]\n",
+      "[ 2.02931965 -9.09433956]\n",
       "polynomial order of wss1 = 1.98934369815\n",
-      "ratio of run times wss1/sklearn = 5.8042042514\n"
+      "ratio of run times wss1/sklearn = 5.8042042514\n",
+      "ratio of run times wss1/sklearn = 68.1652361371\n"
      ]
     }
    ],
@@ -125,12 +127,16 @@
     "fit_sklearn = np.polyfit(np.log(xvec),np.log(plot_array_gauss[0]),1)\n",
     "fit_wss1 = np.polyfit(np.log(xvec),np.log(plot_array_gauss[1]),1)\n",
     "fit_wss2 = np.polyfit(np.log(xvec),np.log(plot_array_gauss[2]),1)\n",
+    "fit_platt = np.polyfit(np.log(xvec),np.log(plot_array_gauss[4]),1)\n",
     "print(fit_wss1)\n",
     "print(fit_wss2)\n",
     "print(fit_sklearn)\n",
+    "print(fit_platt)\n",
     "print('polynomial order of wss1 =',fit_wss1[0])\n",
-    "ratio = (np.exp(fit_wss1[1])) / (np.exp(fit_sklearn[1]))\n",
-    "print('ratio of run times wss1/sklearn =',ratio)\n"
+    "ratio_wss1 = (np.exp(fit_wss1[1])) / (np.exp(fit_sklearn[1]))\n",
+    "ratio_platt = (np.exp(fit_platt[1])) / (np.exp(fit_sklearn[1]))\n",
+    "print('ratio of run times wss1/sklearn =',ratio_wss1)\n",
+    "print('ratio of run times wss1/sklearn =',ratio_platt)\n"
    ]
   },
   {
