last tweeks report

--- a/Report/results.tex
+++ b/Report/results.tex
@@ -32,5 +32,5 @@ As expected from theoretical considerations the Error-Correcting Output Codes pe
 % \lft{n}\rt{k}}
 % \lft{classifier}\rt{no of training points}	
 
-
-We have learned a lot in the past 4 weeks and although this program does not (yet?) win us a kaggle competition we are in general (very) satisfied with the overall outcome of the project and especially with our success rate of over $95$\%.
+\smallskip
+We have learned a lot in the past 4 weeks and although this program does not (yet?) win us a kaggle competition we are in general very content with the overall outcome of the project and especially with our success rate of over $95$\%. To check out our code please have a look at the appendix or at our git repository:  \url{https://github.com/lisaSWP/ml_project}.
