--- a/Report/Report_template.tex
+++ b/Report/Report_template.tex
@@ -22,6 +22,7 @@
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage[export]{adjustbox}
 \usepackage{pdfpages}
+\usepackage{url}
 
 % Umgebungen für Definitionen, Sätze, usw.
 % Es werden Sätze, Definitionen etc innerhalb eines Chapters mit
@@ -98,7 +99,6 @@
 		\end{flushright}
 	\end{minipage}\\[2cm]
 
-	
 	
 \end{titlepage}
 
