--- a/Report/Presentation.tex
+++ b/Report/Presentation.tex
@@ -94,18 +94,12 @@
 	\frametitle{\titleB}
 	\begin{enumerate}
 		\item Implement solver for our QP
-		\begin{itemize}
-			\item 3 versions
-		\end{itemize}
 		\item Implement basic SVM algorithm
 		\begin{itemize}
 			\item linear kernel / Gaussian kernel
 			\item Parameter optimization
 		\end{itemize}
 		\item Combine individual SVMs in different ways
-		\begin{itemize}
-			\item 3 versions
-		\end{itemize}
 		\item Validate and compare results 
 		\
 	\end{enumerate}
@@ -143,23 +137,20 @@
 	\end{aligned}
 	\right\} \text{for all } i \in \{1,\ldots,l\}
 	\end{equation*}
-	\item Define $F_i(\alpha) := y_i (\partial_i d)(\alpha) = \sum_{i = 1}^l \alpha_j y_j k(x_i,x_j) - y_i$.
+	
 \end{itemize}
 \end{frame}
 
 \begin{frame}
 \frametitle{\titleC}
 \begin{itemize}
-	
-	\item The KKT conditions are equivalent to:
+	\item Define $F_i(\alpha) := y_i (\partial_i d)(\alpha) = \sum_{i = 1}^l \alpha_j y_j k(x_i,x_j) - y_i$.
+	\item Then the KKT conditions are equivalent to:
 	\begin{equation*}\label{equiv_KKT}
 	b_{up}(\alpha) := \min_{i \in I_{up}(\alpha)} F_i(\alpha) \geq \max_{j \in I_{low}(\alpha)} F_j(\alpha) =: b_{low}(\alpha),
 	\end{equation*}
-	where $I_{up}(\alpha), I_{low}(\alpha) \subset \{1,\ldots,l\}$: \begin{itemize}
-		\item $I_{up}(\alpha) := \{ i \mid  \alpha_i < C, y_i = 1 \text{ or } \alpha_i > 0, y_i = -1 \}$
-		\item $I_{low}(\alpha) := \{ j \mid \alpha_j < C, y_j = -1 \text{ or } \alpha_j > 0, y_j = 1 \}$.
+	where $I_{up}(\alpha), I_{low}(\alpha)$ are specific subsets of $\{1,\ldots,l\}$.
 	
-	\end{itemize}
 	\item Relax to $b_{up}(\alpha) \geq b_{low}(\alpha) - \tau$ for some tolerance $\tau > 0$.
 	\item A pair $(i,j) \in I_{up}(\alpha) \times I_{low}(\alpha)$ with $F_i(\alpha) < F_j(\alpha) - \tau$ is called \textbf{\alert{$\tau$-violating. }}
 \end{itemize}
@@ -171,13 +162,20 @@
 	\begin{itemize}
 		\item Any algorithm of the following form converges after finitely many steps:
 	\end{itemize}
-	\begin{algorithm}[General SMO type algorithm]\label{GSMO} Let $\tau > 0$. Initialize $k = 0 $ and $\alpha^0 = 0$ and generate iterates $\alpha^k$, $k \in \mathbb{N},$ as follows: 
+	\begin{algorithm}[General SMO type algorithm]\label{GSMO} Let $\tau > 0$. Initialize $k = 0 $ and $\alpha^0 = 0$.
 		\begin{enumerate}
-			\item If $\alpha^k$ satisfies $b_{up}(\alpha^k) \geq b_{low}(\alpha^k) - \tau$, stop. Else \textbf{\alert{pick}} a $\tau$-violating pair $(i,j) \in I_{up}(\alpha^k) \times I_{low}(\alpha^k)$.
-			\item \textbf{\alert{Minimize}} $d$ only in $\alpha^k_i$ and $\alpha^k_j$, leaving $\alpha^k_n$ fixed for $n \notin \{i,j\}$ and respecting constraints. $\rightarrow$ Obtain \textbf{\alert{$\alpha^{\text{new}}$}}.
+			\item \textbf{\alert{Pick}} a $\tau$-violating pair $(\alpha^k_i, \alpha^k_j)$. If there is none, stop.
+			\item \textbf{\alert{Minimize}} $d$ only in $\alpha^k_i$ and $\alpha^k_j$, while respecting constraints. $\rightarrow$ Obtain \textbf{\alert{$\alpha^{\text{new}}$}}.
 			\item Set $k := k+1$, $\alpha^k := \alpha^{\text{new}}$ and go to Step 1.
 		\end{enumerate}
 	\end{algorithm}
+%\begin{algorithm}[General SMO type algorithm]\label{GSMO} Let $\tau > 0$. Initialize $k = 0 $ and $\alpha^0 = 0$ and generate iterates $\alpha^k$, $k \in \mathbb{N},$ as follows: 
+%	\begin{enumerate}
+%		\item If $\alpha^k$ satisfies $b_{up}(\alpha^k) \geq b_{low}(\alpha^k) - \tau$, stop. Else \textbf{\alert{pick}} a $\tau$-violating pair $(i,j) \in I_{up}(\alpha^k) \times I_{low}(\alpha^k)$.
+%		\item \textbf{\alert{Minimize}} $d$ only in $\alpha^k_i$ and $\alpha^k_j$, leaving $\alpha^k_n$ fixed for $n \notin \{i,j\}$ and respecting constraints. $\rightarrow$ Obtain \textbf{\alert{$\alpha^{\text{new}}$}}.
+%		\item Set $k := k+1$, $\alpha^k := \alpha^{\text{new}}$ and go to Step 1.
+%	\end{enumerate}
+%\end{algorithm}
 \end{frame}
 
 \begin{frame}
@@ -204,7 +202,7 @@
 	\frametitle{\titleC}
 	
 		\begin{itemize}
-		\item \textbf{\alert{Run time comparison}} of algorithms with Gaussian kernel and labels by first ECOC classifier on our digits:
+		\item \textbf{\alert{Run time comparison}} of algorithms with Gaussian kernel and separating the digits into even and odd numbers:
 		\end{itemize}
 
 	\begin{figure}[h]
@@ -232,7 +230,7 @@
 		\item Train $k$ SVMs that separate each group from the rest
 		\item Compare outcome to what would arise for each digit.
 		\item \textbf{\alert{Problem:}} Points may not be classified uniquely.
-		\item Handle overlappings by minimizing distance to barycenters
+		\item Handle overlappings by comparing distance to barycenters
 	\end{itemize}
 
 	\begin{figure}[h]
